--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -99,7 +99,7 @@ build_script:
     - "%PYTHON%\\python.exe setup.py bdist_wheel --universal"
 
     - IF "%APPVEYOR_REPO_BRANCH%"=="master" (
-        twine upload -u %PYPI_USER_NAME% -p %PYPI_PASSWORD% dist/* || true
+        twine upload --verbose -u %PYPI_USER_NAME% -p %PYPI_PASSWORD% dist/* || true
       ) ELSE (
         twine upload -u %PYPI_USER_NAME% -p %PYPI_PASSWORD% --repository-url https://test.pypi.org/legacy/ dist/*  || true
       )
