--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,35 +13,6 @@ environment:
 
     matrix:
  
-      - PYTHON: "C:\\Python27-x64"
-        PYTHON_VERSION: "2.7.13"
-        PYTHON_ARCH: "64"
-        # WINDOWS_SDK_VERSION: "v7.0"
-        WINDOWS_SDK_VERSION: "v7.1"
-        DISTRIBUTIONS: "sdist bdist_wheel"
-        APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-  
-      # - PYTHON: "C:\\Python33-x64"
-      #   PYTHON_VERSION: "3.3.5"
-      #   PYTHON_ARCH: "64"
-      #   WINDOWS_SDK_VERSION: "v7.1"
-      #   DISTRIBUTIONS: "bdist_wheel"
-      #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-  
-      - PYTHON: "C:\\Python34-x64"
-        PYTHON_VERSION: "3.4.4"
-        PYTHON_ARCH: "64"
-        WINDOWS_SDK_VERSION: "v7.1"
-        DISTRIBUTIONS: "bdist_wheel"
-        APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-
-      - PYTHON: "C:\\Python35-x64"
-        PYTHON_VERSION: "3.5.3"
-        PYTHON_ARCH: "64"
-        WINDOWS_SDK_VERSION: "v7.1"
-        DISTRIBUTIONS: "bdist_wheel"
-        APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-
       - PYTHON: "C:\\Python36-x64"
         PYTHON_VERSION: "3.6.1"
         PYTHON_ARCH: "64"
@@ -71,40 +42,9 @@ install:
 
   - "%PYTHON%\\python.exe -m pip install cpuid"
   - "%PYTHON%\\python.exe -c \"import cpuid; _, b, _, _ = cpuid.cpuid_count(7, 0); print((b >> 29) & 1)\""
+  - "%PYTHON%\\python.exe test.py"
 
-  - echo %APPVEYOR_REPO_BRANCH%
-
-  # Just for dev branch
-  - IF %APPVEYOR_REPO_BRANCH%==dev "%PYTHON%\\Scripts\\pip.exe" install --upgrade --index-url https://test.pypi.org/pypi/ cpuid-native
-  - IF "%APPVEYOR_REPO_BRANCH%"=="dev" (echo %APPVEYOR_REPO_BRANCH%)
-  - IF "%APPVEYOR_REPO_BRANCH%"=="dev" (echo "%APPVEYOR_REPO_BRANCH%")
-
-before_build:
-
-  # - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat" amd64
-  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
-  # - IF "%PYTHON_ARCH%"=="64" (
-  #     call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
-  #   ) ELSE (
-  #     call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
-  #   )
-
-
-# test_script:
-build_script:
-    - cd %APPVEYOR_BUILD_FOLDER% 
-    - pip install  -e .
-
-    - "%PYTHON%\\python.exe setup.py sdist"
-    - "%PYTHON%\\python.exe setup.py bdist_wheel --universal"
-
-    # - twine check dist/*
-
-    - IF "%APPVEYOR_REPO_BRANCH%"=="master" (
-        twine upload --verbose -u %PYPI_USER_NAME% -p %PYPI_PASSWORD% dist/* || true
-      ) ELSE (
-        twine upload -u %PYPI_USER_NAME% -p %PYPI_PASSWORD% --repository-url https://test.pypi.org/legacy/ dist/*  || true
-      )
+ 
 
 # ------------------------------------------------------------------------------------------------------
 
