--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels for cp${{ matrix.python }}-${{ matrix.platform_id }}-${{ matrix.manylinux_image }}
+    name: Build wheels for ${{ matrix.os }}-${{ matrix.python_version }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -39,76 +39,34 @@ jobs:
 
           # Linux
           - os: ubuntu-latest
-            python: 37
             python_version: "3.7"
-            bitness: 64
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
           - os: ubuntu-latest
-            python: 38
             python_version: "3.8"
-            bitness: 64
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
           - os: ubuntu-latest
-            python: 39
             python_version: "3.9"
-            bitness: 64
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
           - os: ubuntu-latest
-            python: 310
             python_version: "3.10"
-            bitness: 64
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
           - os: ubuntu-latest
-            python: 311
             python_version: "3.11"
-            bitness: 64
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
 
           # MacOS x86_64
           - os: macos-latest
-            bitness: 64
-            python: 37
             python_version: "3.7"
-            platform_id: macosx_x86_64
           - os: macos-latest
-            bitness: 64
-            python: 38
             python_version: "3.8"
-            platform_id: macosx_x86_64
           - os: macos-latest
-            bitness: 64
-            python: 39
             python_version: "3.9"
-            platform_id: macosx_x86_64
           - os: macos-latest
-            bitness: 64
-            python: 310
             python_version: "3.10"
-            platform_id: macosx_x86_64
           - os: macos-latest
-            bitness: 64
-            python: 311
             python_version: "3.11"
-            platform_id: macosx_x86_64
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          # python-version: '3.9'
           python-version: ${{ matrix.python_version }}
-
-      # - name: Build wheels
-      #   uses: pypa/cibuildwheel@v2.12.1
-      #   env:
-      #     CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
-      #     CIBW_ARCHS: all
 
       - name: Prepare Env
         run: |
