--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -48,6 +48,10 @@ jobs:
             python_version: "3.10"
           - os: ubuntu-latest
             python_version: "3.11"
+          - os: ubuntu-latest
+            python_version: "3.12"
+          - os: ubuntu-latest
+            python_version: "3.13"
 
           # MacOS x86_64
           - os: macos-latest
@@ -60,10 +64,14 @@ jobs:
             python_version: "3.10"
           - os: macos-latest
             python_version: "3.11"
+          - os: macos-latest
+            python_version: "3.12"
+          - os: macos-latest
+            python_version: "3.13"
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
           python-version: ${{ matrix.python_version }}
@@ -81,8 +89,9 @@ jobs:
           python setup.py sdist
           python setup.py bdist_wheel --universal
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: wheels-${{ matrix.os }}-${{ matrix.python_version }}
           path: ./wheelhouse/*.whl
 
 
@@ -90,31 +99,34 @@ jobs:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.9'
+          python-version: '3.12'
 
       - name: Build sdist
         run: pip install setuptools_scm && python setup.py sdist
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: sdist
           path: dist/*.tar.gz
 
   upload_pypi:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
-    # if: github.event_name == 'release' && github.event.action == 'published'
+    if: github.ref == 'refs/heads/master'
     steps:
-      - uses: actions/download-artifact@v4.1.7
+      - uses: actions/download-artifact@v4
         with:
-          name: artifact
+          pattern: '*'
           path: dist
+          merge-multiple: true
 
-      - uses: pypa/gh-action-pypi-publish@v1.7.1
+      - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           # user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
+          skip-existing: true
